    * AlarmConfigDialog.cs - got rid of outer frame (since everything else it was framing from has moved to the plugin config page.
    * AlarmConfigDialog & SleepTimerConfigDialog - moved some settings to the constructor.  Might make more sense.
    * Random padding changes to be consistent

2006-05-08  Bertrand Lorentz  <bertrand.lorentz@free.fr>
    * Fix crash when AlarmCommand is not set.
    * Renamed AlarmConfigPage to AlarmConfigDialog, it's a Window now.

2006-05-07  Patrick van Staveren  <trick@vanstaveren.us>
    * Added alarm external command execution
    * Moved alarm configuration options (volume fade, command exec) to plugin's config page
    * Fixed dispose bug with not removing menu entries when unloading plugin

2006-04-21  Patrick van Staveren  <trick@vanstaveren.us>
	* Quick autogen.sh fix of project name
	* Added Enabled checkbox to alarm config - enables/disables the alarm
	* Clean up AlarmConfigPage text formatting
	* AlarmConfigPage - don't do debug outputs (open GNOME Config Editor if you need this)
	* VolumeFade - debug a bit more, compare final volume to internal variable and not buggy PlayerEngineCore.Volume
	
2006-04-19  Patrick van Staveren  <trick@vanstaveren.us>
	* Quick fix - VolumeFade was not working due to PlayerEngineCore.Volume not updating itself fast enough.  Fixed!

2006-04-13  Patrick van Staveren  <trick@vanstaveren.us>
	* Quick bugfix - require banshee 0.10.8 in configure.ac - due to PlayerEngineCore changes that were introduced in 0.10.8.

2006-04-12  Patrick van Staveren  <trick@vanstaveren.us>
	* VolumeFade now uses GLib timer, so it is a non-blocking call.
	* Sleep Timer now calls volume fade and fades out current song first.
	* UI: Alarm now has Volume sliders, and is cleaner.  Getting ready to move volume adjust to plugin config page.
	* Updated TODO and BUGS files with some changes.
	* Wrote a simple README.

2006-04-11  Patrick van Staveren  <trick@vanstaveren.us>